--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "next-chamical-page",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "pnpm": "^8.6.11"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
