--- a/package.json
+++ b/package.json
@@ -12,18 +12,20 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@ant-design/cssinjs": "1.18.0-alpha.5",
-    "antd": "^5.11.3",
-    "next": "14.0.3",
-    "react": "^18",
-    "react-dom": "^18"
+    "@ant-design/cssinjs": "1.18.4",
+    "@supabase/ssr": "^0.1.0",
+    "@supabase/supabase-js": "^2.39.7",
+    "antd": "^5.14.2",
+    "next": "14.1.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "eslint": "^8",
-    "eslint-config-next": "14.0.3",
-    "typescript": "^5"
+    "@types/node": "^20.11.20",
+    "@types/react": "^18.2.58",
+    "@types/react-dom": "^18.2.19",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "14.1.0",
+    "typescript": "^5.3.3"
   }
 }
