--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/react-dom": "^18.2.19",
     "eslint": "^8.57.0",
     "eslint-config-next": "14.1.0",
+    "prisma": "^5.12.1",
     "typescript": "^5.3.3"
   }
 }
