--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@supabase/ssr": "^0.1.0",
     "@supabase/supabase-js": "^2.39.7",
     "antd": "^5.14.2",
+    "axios": "^1.6.8",
     "next": "14.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
@@ -28,6 +29,7 @@
     "eslint": "^8.57.0",
     "eslint-config-next": "14.1.0",
     "prisma": "^5.12.1",
+    "sass": "^1.75.0",
     "typescript": "^5.3.3"
   }
 }
