--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "pnpm": "^8.6.11"
   },
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 3005",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -19,11 +19,13 @@
     "antd": "^5.14.2",
     "axios": "^1.6.8",
     "next": "14.1.0",
+    "nodemailer": "^6.9.13",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/node": "^20.11.20",
+    "@types/nodemailer": "^6.4.14",
     "@types/react": "^18.2.58",
     "@types/react-dom": "^18.2.19",
     "eslint": "^8.57.0",
