--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "dev": "next dev -p 3005",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "db:generate": "prisma generate",
+    "db:pull": "prisma db pull"
   },
   "dependencies": {
     "@ant-design/cssinjs": "1.18.4",
     "@ant-design/icons": "^4.6.2",
+    "@prisma/client": "^5.13.0",
     "@supabase/ssr": "^0.1.0",
     "@supabase/supabase-js": "^2.39.7",
     "antd": "^5.14.2",
@@ -30,7 +33,7 @@
     "@types/react-dom": "^18.2.19",
     "eslint": "^8.57.0",
     "eslint-config-next": "14.1.0",
-    "prisma": "^5.12.1",
+    "prisma": "^5.13.0",
     "sass": "^1.75.0",
     "typescript": "^5.3.3"
   }
