--- a/package.json
+++ b/package.json
@@ -37,10 +37,13 @@
     "@types/nodemailer": "^6.4.14",
     "@types/react": "^18.2.58",
     "@types/react-dom": "^18.2.19",
+    "autoprefixer": "^10.4.19",
     "eslint": "^8.57.0",
     "eslint-config-next": "14.1.0",
+    "postcss": "^8.4.38",
     "prisma": "^5.13.0",
     "sass": "^1.75.0",
+    "tailwindcss": "^3.4.4",
     "typescript": "^5.3.3"
   }
 }
