--- a/package.json
+++ b/package.json
@@ -18,25 +18,34 @@
   "dependencies": {
     "@ant-design/cssinjs": "1.18.4",
     "@ant-design/icons": "^4.6.2",
+    "@hookform/resolvers": "^3.7.0",
     "@prisma/client": "^5.13.0",
+    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-popover": "^1.1.1",
     "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-tabs": "^1.1.0",
     "@supabase/ssr": "^0.1.0",
     "@supabase/supabase-js": "^2.39.7",
+    "@tanstack/react-table": "^8.19.2",
     "antd": "^5.14.2",
     "axios": "^1.6.8",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "date-fns": "^3.6.0",
     "dayjs": "^1.11.11",
     "lucide-react": "^0.399.0",
     "next": "14.1.0",
     "nodemailer": "^6.9.13",
     "react": "^18.2.0",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.52.1",
     "react-icons": "^5.2.1",
     "tailwind-merge": "^2.3.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
