--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@ant-design/cssinjs": "1.18.4",
     "@ant-design/icons": "^4.6.2",
+    "@google-cloud/recaptcha-enterprise": "^5.11.0",
     "@hookform/resolvers": "^3.7.0",
     "@prisma/client": "^5.13.0",
     "@radix-ui/react-avatar": "^1.1.0",
