--- a/package.json
+++ b/package.json
@@ -72,5 +72,8 @@
     "sass": "^1.75.0",
     "tailwindcss": "^3.4.4",
     "typescript": "^5.3.3"
-  }
+  },
+  "trustedDependencies": [
+    "protobufjs"
+  ]
 }
