--- a/package.json
+++ b/package.json
@@ -49,12 +49,14 @@
     "dayjs": "^1.11.11",
     "lucide-react": "^0.399.0",
     "next": "14.1.0",
+    "next-themes": "^0.3.0",
     "nodemailer": "^6.9.13",
     "react": "^18.2.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.52.1",
     "react-icons": "^5.2.1",
+    "sonner": "^1.5.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8"
