--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "next-chamical-page",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
   "engines": {
     "pnpm": "^8.6.11"
@@ -80,6 +80,9 @@
     "typescript": "^5.3.3"
   },
   "trustedDependencies": [
+    "@prisma/client",
+    "@prisma/engines",
+    "prisma",
     "protobufjs"
   ]
 }
