--- a/package.json
+++ b/package.json
@@ -39,8 +39,8 @@
     "@radix-ui/react-toast": "^1.2.2",
     "@radix-ui/react-tooltip": "^1.1.2",
     "@react-pdf/renderer": "^3.4.4",
-    "@supabase/ssr": "^0.1.0",
-    "@supabase/supabase-js": "^2.39.7",
+    "@supabase/ssr": "^0.5.1",
+    "@supabase/supabase-js": "^2.46.1",
     "@tanstack/react-table": "^8.19.2",
     "antd": "^5.14.2",
     "axios": "^1.6.8",
@@ -50,12 +50,12 @@
     "date-fns": "^3.6.0",
     "dayjs": "^1.11.11",
     "lucide-react": "^0.399.0",
-    "next": "14.1.0",
+    "next": "^15.0.3",
     "next-themes": "^0.3.0",
     "nodemailer": "^6.9.13",
-    "react": "^18.2.0",
+    "react": "^19.0.0-rc-5c56b873-20241107",
     "react-day-picker": "^8.10.1",
-    "react-dom": "^18.2.0",
+    "react-dom": "^19.0.0-rc-5c56b873-20241107",
     "react-hook-form": "^7.52.1",
     "react-icons": "^5.2.1",
     "resend": "^4.0.0",
@@ -72,7 +72,7 @@
     "@types/react-dom": "^18.2.19",
     "autoprefixer": "^10.4.19",
     "eslint": "^8.57.0",
-    "eslint-config-next": "14.1.0",
+    "eslint-config-next": "^15.0.3",
     "postcss": "^8.4.38",
     "prisma": "^5.13.0",
     "sass": "^1.75.0",
@@ -83,6 +83,7 @@
     "@prisma/client",
     "@prisma/engines",
     "prisma",
-    "protobufjs"
+    "protobufjs",
+    "sharp"
   ]
 }
