--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@supabase/ssr": "^0.5.1",
     "@supabase/supabase-js": "^2.46.1",
     "@tanstack/react-table": "^8.19.2",
+    "@vercel/analytics": "^1.3.2",
     "antd": "^5.14.2",
     "axios": "^1.6.8",
     "bcryptjs": "^2.4.3",
