--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "next-chamical-page",
-  "version": "1.0.3",
+  "name": "rents-chamical-page",
+  "version": "1.0.4",
   "private": true,
   "engines": {
     "pnpm": "^8.6.11"
