--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "prisma": "^5.13.0",
     "sass": "^1.75.0",
     "tailwindcss": "^3.4.4",
+    "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
   },
   "trustedDependencies": [
