--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "dayjs": "^1.11.11",
+    "jsbarcode": "^3.11.6",
     "lucide-react": "^0.460.0",
     "next": "^15.0.3",
     "next-themes": "^0.3.0",
