Actualizar la programación del cron y agregar verificación de autorización mediante clave secreta en la ruta de cálculo de intereses automáticos.

--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,10 @@
   "crons": [
     {
       "path": "/api/crons/automatic-interest-calculation",
-      "schedule": "0 10 * * *"
+      "schedule": "0 3 * * *",
+      "headers": {
+        "x-vercel-cron-key": "CRON_SECRET_KEY"
+      }
     }
   ]
 }
