--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
   "crons": [
     {
-      "path": "/api/crons/automatic-interest-calculation?key=01963b38-446c-7f67-be88-cb35f8ec8d3c",
+      "path": "/api/crons/automatic-interest-calculation",
       "schedule": "0 3 * * *"
     }
   ]
