--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "next": "^15.0.3",
     "next-themes": "^0.3.0",
     "nodemailer": "^6.9.13",
+    "qrcode": "^1.5.4",
     "react": "^19.0.0-rc-5c56b873-20241107",
     "react-day-picker": "^8.10.1",
     "react-dom": "^19.0.0-rc-5c56b873-20241107",
@@ -67,6 +68,7 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20.11.20",
     "@types/nodemailer": "^6.4.14",
+    "@types/qrcode": "^1.5.5",
     "@types/react": "^18.2.58",
     "@types/react-dom": "^18.2.19",
     "autoprefixer": "^10.4.19",
