--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@vercel/analytics": "^1.3.2",
     "axios": "^1.6.8",
     "bcryptjs": "^2.4.3",
+    "caniuse-lite": "^1.0.30001724",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
