--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "date-fns": "^3.6.0",
     "dayjs": "^1.11.11",
     "jsbarcode": "^3.11.6",
-    "lucide-react": "^0.513.0",
+    "lucide-react": "^0.525.0",
     "next": "^15.0.3",
     "next-themes": "^0.3.0",
     "nodemailer": "^6.9.13",
@@ -60,6 +60,7 @@
     "react-dom": "^19.0.0-rc-5c56b873-20241107",
     "react-hook-form": "^7.52.1",
     "react-icons": "^5.2.1",
+    "recharts": "^3.0.2",
     "resend": "^4.0.0",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.3.0",
