--- a/vercel.json
+++ b/vercel.json
@@ -3,6 +3,10 @@
     {
       "path": "/api/crons/automatic-interest-calculation",
       "schedule": "0 3 * * *"
+    },
+    {
+      "path": "/api/crons/generate-penalties",
+      "schedule": "0 4 * * *"
     }
   ]
 }
