--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "dayjs": "^1.11.11",
     "jsbarcode": "^3.11.6",
     "lucide-react": "^0.525.0",
-    "next": "^15.0.3",
+    "next": "15.3.8",
     "next-themes": "^0.3.0",
     "nodemailer": "^6.9.13",
     "qrcode": "^1.5.4",
